--- a/2026-02-14.ipynb
+++ b/2026-02-14.ipynb
@@ -11,7 +11,6 @@
     "\n",
     "## TODO\n",
     "\n",
-    "- [] move `delete_results_from_gpu_memory()` function to `roadside.py`\n",
     "- [x] move `get_data_for_images_table` function to `roadside.py`\n",
     "- [x] move `get_data_for_detections_table` function to `roadside.py`\n",
     "- [x] remove detection attribute fields from schema\n",
@@ -52,7 +51,7 @@
     "text_prompts=[\"coconut palm tree\"]\n",
     "\n",
     "# SQLite3 database\n",
-    "delete_database_before_run = False # normally False; change to True to rebuild db during testing\n",
+    "delete_database_before_run = True # normally False; change to True to rebuild db during testing\n",
     "db_path = 'sam3_detections.sqlite3'\n",
     "schema_sql = \"\"\"\n",
     "--- 2026-02-14 07:32\n",
@@ -125,122 +124,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "8d88a1d7",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "import pandas as pd\n",
-    "import exif\n",
-    "\n",
-    "def get_data_for_images_table(results_cpu) -> tuple:\n",
-    "    \"\"\" \n",
-    "    Gets data for for a single image for insertion as a record in the 'images' database table. \n",
-    "    Returns data as a tuple: (image_width, image_height, timestamp, latitude, longitude)\n",
-    "    image_width and image_height come from results_cpu\n",
-    "    timestamp, latitude, longitude come from the EXIF metadata embedded in the image, if it exists. \n",
-    "    \"\"\"\n",
-    "\n",
-    "    image_height = results_cpu[0].orig_shape[0]\n",
-    "    image_width = results_cpu[0].orig_shape[1]\n",
-    "\n",
-    "    with open(image_path, 'rb') as f:\n",
-    "        imgx = exif.Image(f)\n",
-    "\n",
-    "    if imgx.has_exif:\n",
-    "        # to see all available exif_data use imgx.get_all()\n",
-    "        \n",
-    "        # timestamp\n",
-    "        timestamp = imgx.datetime\n",
-    "            \n",
-    "        # latitude\n",
-    "        d, m, s = imgx.gps_latitude\n",
-    "        latitude = d + m/60 + s/3600   \n",
-    "        if imgx.gps_latitude_ref == 'S':\n",
-    "            latitude = -latitude  \n",
-    "\n",
-    "        # longitude\n",
-    "        d, m, s = imgx.gps_longitude\n",
-    "        longitude = d + m/60 + s/3600   \n",
-    "        if imgx.gps_longitude_ref == 'W':\n",
-    "            longitude = -longitude\n",
-    "        longitude\n",
-    "    else:\n",
-    "        timestamp = None\n",
-    "        latitude = None\n",
-    "        longitude= None\n",
-    "    \n",
-    "    return (image_width, image_height, timestamp, latitude, longitude)\n",
-    "\n",
-    "# image_path = image_paths[0]\n",
-    "# results_gpu = rs.run_sam3_semantic_predictor(input_image_path=image_path, text_prompts=text_prompts)\n",
-    "# results_cpu = [r.cpu() for r in results_gpu] # copy results to CPU\n",
-    "# delete_results_from_gpu_memory() # Clear GPU memory after processing each image\n",
-    "# get_data_for_images_table(results_cpu)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "b360da48",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "def get_data_for_detections_table(results_cpu, image_id:int)->pd.DataFrame:\n",
-    "    \"\"\" \n",
-    "    Gets data for for a single image for insertion as records in the 'detections' database table. \n",
-    "    Returns data as a pandas dataframe containing columns for image_id, class_id, poly_wkt, x_min, y_min, x_max, y_max, confidence\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Process detection results (assuming one image for simplicity: results[0])\n",
-    "    result = results_cpu[0]\n",
-    "\n",
-    "    # create a pandas dataframe for bounding boxes\n",
-    "    boxes_data = result.boxes.data.tolist()\n",
-    "    df_boxes = pd.DataFrame(boxes_data, columns=['x_min', 'y_min', 'x_max', 'y_max', 'confidence', 'class_id'])\n",
-    "\n",
-    "    # create a pandas dataframe for segmentation masks (polygons)\n",
-    "    masks_data = []\n",
-    "    # Iterate over each detected object's mask\n",
-    "    for i, mask in enumerate(result.masks.xy):\n",
-    "        poly_arr = mask\n",
-    "        poly_wkt = rs.conv_poly_from_array_to_wkt(poly_arr)\n",
-    "\n",
-    "        masks_data.append({\n",
-    "            'image_path': image_path,\n",
-    "            'object_index': i, \n",
-    "            'class_id': df_boxes.iloc[i]['class_id'], \n",
-    "            'poly_wkt': poly_wkt})\n",
-    "        df_masks = pd.DataFrame(masks_data)  \n",
-    "\n",
-    "    # merge df_masks and df_detections  \n",
-    "    df_detections = pd.merge(df_masks, df_boxes, how=\"outer\", left_index=True, right_index=True)\n",
-    "    \n",
-    "    # clean database\n",
-    "    df_detections['image_id'] = image_id\n",
-    "    df_detections.rename(columns={'class_id_x': 'class_id'}, inplace=True)\n",
-    "    df_detections.drop(['image_path', 'object_index', 'class_id_y'], inplace=True, axis='columns')\n",
-    "    df_detections = df_detections.astype({'class_id': int, 'x_min': int, 'y_min': int, 'x_max': int, 'y_max': int})\n",
-    "\n",
-    "    return df_detections\n",
-    "\n",
-    "# image_path = image_paths[0]\n",
-    "# results_gpu = rs.run_sam3_semantic_predictor(input_image_path=image_path, text_prompts=text_prompts)\n",
-    "# results_cpu = [r.cpu() for r in results_gpu] # copy results to CPU\n",
-    "# delete_results_from_gpu_memory() # Clear GPU memory after processing each image\n",
-    "# get_data_for_images_table(results_cpu)\n",
-    "# fake_image_id = 999\n",
-    "# get_data_for_detections_table(results_cpu, image_id=fake_image_id)    "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "5dead5a8",
    "metadata": {},
@@ -302,9 +185,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING: Image 20251129_152106.jpg is already in the database. Skipping to next image.\n",
-      "WARNING: Image 08hs-palms-03-zglw-superJumbo.webp is already in the database. Skipping to next image.\n",
+      "Ultralytics 8.4.9 🚀 Python-3.13.11 torch-2.10.0+cu128 CUDA:0 (NVIDIA GeForce RTX 3080 Laptop GPU, 15992MiB)\n",
+      "\n",
+      "image 1/1 /home/aubrey/Desktop/sam3-2026-01-31/20251129_152106.jpg: 1932x1932 25 coconut palm trees, 1230.9ms\n",
+      "Speed: 15.2ms preprocess, 1230.9ms inference, 4.9ms postprocess per image at shape (1, 3, 1932, 1932)\n",
+      "Results saved to \u001b[1m/home/aubrey/Desktop/blog2026/runs/segment/predict170\u001b[0m\n",
+      "deleting results from GPU memory\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[38;5;247mic\u001b[39m\u001b[38;5;245m|\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;247mparameters\u001b[39m\u001b[38;5;245m:\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;245m(\u001b[39m\u001b[38;5;36m'\u001b[39m\u001b[38;5;36m20251129_152106.jpg\u001b[39m\u001b[38;5;36m'\u001b[39m\u001b[38;5;245m,\u001b[39m\n",
+      "\u001b[38;5;245m                 \u001b[39m\u001b[38;5;36m1920\u001b[39m\u001b[38;5;245m,\u001b[39m\n",
+      "\u001b[38;5;245m                 \u001b[39m\u001b[38;5;36m1080\u001b[39m\u001b[38;5;245m,\u001b[39m\n",
+      "\u001b[38;5;245m                 \u001b[39m\u001b[38;5;36m'\u001b[39m\u001b[38;5;36m2025:11:29 15:21:06\u001b[39m\u001b[38;5;36m'\u001b[39m\u001b[38;5;245m,\u001b[39m\n",
+      "\u001b[38;5;245m                 \u001b[39m\u001b[38;5;245m-\u001b[39m\u001b[38;5;36m17.73039628333333\u001b[39m\u001b[38;5;245m,\u001b[39m\n",
+      "\u001b[38;5;245m                 \u001b[39m\u001b[38;5;36m168.18940991666668\u001b[39m\u001b[38;5;245m)\u001b[39m\n",
+      "\u001b[38;5;247mic\u001b[39m\u001b[38;5;245m|\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;247mimage_id\u001b[39m\u001b[38;5;245m:\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;36m1\u001b[39m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ultralytics 8.4.9 🚀 Python-3.13.11 torch-2.10.0+cu128 CUDA:0 (NVIDIA GeForce RTX 3080 Laptop GPU, 15992MiB)\n",
+      "\n",
+      "image 1/1 /home/aubrey/Desktop/sam3-2026-01-31/08hs-palms-03-zglw-superJumbo.webp: 1932x1932 2 coconut palm trees, 1132.8ms\n",
+      "Speed: 14.0ms preprocess, 1132.8ms inference, 0.9ms postprocess per image at shape (1, 3, 1932, 1932)\n",
+      "Results saved to \u001b[1m/home/aubrey/Desktop/blog2026/runs/segment/predict171\u001b[0m\n",
+      "deleting results from GPU memory\n",
       "FINISHED\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[38;5;247mic\u001b[39m\u001b[38;5;245m|\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;247mparameters\u001b[39m\u001b[38;5;245m:\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;245m(\u001b[39m\u001b[38;5;36m'\u001b[39m\u001b[38;5;36m08hs-palms-03-zglw-superJumbo.webp\u001b[39m\u001b[38;5;36m'\u001b[39m\u001b[38;5;245m,\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;36m1366\u001b[39m\u001b[38;5;245m,\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;36m2048\u001b[39m\u001b[38;5;245m,\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;100mNone\u001b[39m\u001b[38;5;245m,\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;100mNone\u001b[39m\u001b[38;5;245m,\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;100mNone\u001b[39m\u001b[38;5;245m)\u001b[39m\n",
+      "\u001b[38;5;247mic\u001b[39m\u001b[38;5;245m|\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;247mimage_id\u001b[39m\u001b[38;5;245m:\u001b[39m\u001b[38;5;245m \u001b[39m\u001b[38;5;36m2\u001b[39m\n"
      ]
     }
    ],
@@ -358,13 +278,6 @@
     "        parameters = (image_id, 0, r['poly_wkt'], r['x_min'], r['y_min'], r['x_max'], r['y_max'], r['confidence']) \n",
     "        con.execute(sql, parameters)\n",
     "        con.commit()\n",
-    "    \n",
-    "    # print('building database') \n",
-    "    # build_database(\n",
-    "    #     image_path=image_path,\n",
-    "    #     results=results_cpu,                             \n",
-    "    #     db_path=db_path\n",
-    "    # ) \n",
     "con.close()   \n",
     "print('FINISHED')    "
    ]
@@ -379,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "9d0818fb",
    "metadata": {},
    "outputs": [
@@ -448,7 +361,7 @@
        "1                  NaN        NaN        NaN  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "49a2ac8d",
    "metadata": {},
    "outputs": [
@@ -914,7 +827,7 @@
        "26  2068.0    0.928711  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "386d13ef",
    "metadata": {},
    "outputs": [],
