--- a/processing_videos.ipynb
+++ b/processing_videos.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "09fe6ab6",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
     "import glob\n",
     "from icecream import ic\n",
     "import cv2\n",
-    "import os\n"
+    "import os"
    ]
   },
   {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "cb59df23",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,6 @@
     "\n",
     "    # Iterate over each image and write it to the video\n",
     "    for image_path in image_paths:\n",
-    "        # image_path = os.path.join(input_folder, image_file)\n",
     "        frame = cv2.imread(image_path)\n",
     "        video.write(frame)\n",
     "\n",
