--- a/pca.ipynb
+++ b/pca.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "id": "0d690737",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "id": "379c5b92",
    "metadata": {},
    "outputs": [],
@@ -43,139 +43,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "id": "6dd3611d",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>image_path</th>\n",
-       "      <th>object_index</th>\n",
-       "      <th>class_id_x</th>\n",
-       "      <th>poly_wkt</th>\n",
-       "      <th>x_min</th>\n",
-       "      <th>y_min</th>\n",
-       "      <th>x_max</th>\n",
-       "      <th>y_max</th>\n",
-       "      <th>confidence</th>\n",
-       "      <th>class_id_y</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>08hs-palms-03-zglw-superJumbo.webp</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>POLYGON ((486 679, 486 684, 485 685, 485 688, ...</td>\n",
-       "      <td>354.5</td>\n",
-       "      <td>683.500</td>\n",
-       "      <td>593.5</td>\n",
-       "      <td>2068.0</td>\n",
-       "      <td>0.928711</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>08hs-palms-03-zglw-superJumbo.webp</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>POLYGON ((1035 1274, 1035 1276, 1034 1277, 103...</td>\n",
-       "      <td>701.0</td>\n",
-       "      <td>1273.000</td>\n",
-       "      <td>1103.0</td>\n",
-       "      <td>2066.0</td>\n",
-       "      <td>0.920898</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>20251129_152106.jpg</td>\n",
-       "      <td>16</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>POLYGON ((1154 233, 1153 234, 1151 234, 1150 2...</td>\n",
-       "      <td>939.5</td>\n",
-       "      <td>232.875</td>\n",
-       "      <td>1329.0</td>\n",
-       "      <td>997.5</td>\n",
-       "      <td>0.842285</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>20251129_152106.jpg</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>POLYGON ((1681 715, 1680 716, 1680 717, 1675 7...</td>\n",
-       "      <td>1592.0</td>\n",
-       "      <td>715.500</td>\n",
-       "      <td>1778.0</td>\n",
-       "      <td>905.5</td>\n",
-       "      <td>0.771484</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>20251129_152106.jpg</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>POLYGON ((1013 829, 1008 834, 1006 834, 1003 8...</td>\n",
-       "      <td>963.0</td>\n",
-       "      <td>828.500</td>\n",
-       "      <td>1055.0</td>\n",
-       "      <td>985.5</td>\n",
-       "      <td>0.763672</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           image_path  object_index  class_id_x  \\\n",
-       "0  08hs-palms-03-zglw-superJumbo.webp             1         0.0   \n",
-       "1  08hs-palms-03-zglw-superJumbo.webp             0         0.0   \n",
-       "2                 20251129_152106.jpg            16         0.0   \n",
-       "3                 20251129_152106.jpg             5         0.0   \n",
-       "4                 20251129_152106.jpg             9         0.0   \n",
-       "\n",
-       "                                            poly_wkt   x_min     y_min  \\\n",
-       "0  POLYGON ((486 679, 486 684, 485 685, 485 688, ...   354.5   683.500   \n",
-       "1  POLYGON ((1035 1274, 1035 1276, 1034 1277, 103...   701.0  1273.000   \n",
-       "2  POLYGON ((1154 233, 1153 234, 1151 234, 1150 2...   939.5   232.875   \n",
-       "3  POLYGON ((1681 715, 1680 716, 1680 717, 1675 7...  1592.0   715.500   \n",
-       "4  POLYGON ((1013 829, 1008 834, 1006 834, 1003 8...   963.0   828.500   \n",
-       "\n",
-       "    x_max   y_max  confidence  class_id_y  \n",
-       "0   593.5  2068.0    0.928711         0.0  \n",
-       "1  1103.0  2066.0    0.920898         0.0  \n",
-       "2  1329.0   997.5    0.842285         0.0  \n",
-       "3  1778.0   905.5    0.771484         0.0  \n",
-       "4  1055.0   985.5    0.763672         0.0  "
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "DatabaseError",
+     "evalue": "Execution failed on sql '\nSELECT * FROM detections\nORDER BY image_path, confidence DESC, object_index;\n': no such column: image_path",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mOperationalError\u001b[39m                          Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/sam3-2026-01-31/.venv/lib/python3.13/site-packages/pandas/io/sql.py:2702\u001b[39m, in \u001b[36mSQLiteDatabase.execute\u001b[39m\u001b[34m(self, sql, params)\u001b[39m\n\u001b[32m   2701\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m2702\u001b[39m     \u001b[43mcur\u001b[49m\u001b[43m.\u001b[49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43msql\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   2703\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m cur\n",
+      "\u001b[31mOperationalError\u001b[39m: no such column: image_path",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mDatabaseError\u001b[39m                             Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Get data\u001b[39;00m\n\u001b[32m      2\u001b[39m conn = sqlite3.connect(db_path)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m df = \u001b[43mpd\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread_sql\u001b[49m\u001b[43m(\u001b[49m\u001b[43msql\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconn\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      4\u001b[39m conn.close()\n\u001b[32m      6\u001b[39m df.head(\u001b[32m10\u001b[39m)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/sam3-2026-01-31/.venv/lib/python3.13/site-packages/pandas/io/sql.py:702\u001b[39m, in \u001b[36mread_sql\u001b[39m\u001b[34m(sql, con, index_col, coerce_float, params, parse_dates, columns, chunksize, dtype_backend, dtype)\u001b[39m\n\u001b[32m    700\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m pandasSQL_builder(con) \u001b[38;5;28;01mas\u001b[39;00m pandas_sql:\n\u001b[32m    701\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(pandas_sql, SQLiteDatabase):\n\u001b[32m--> \u001b[39m\u001b[32m702\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mpandas_sql\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread_query\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m    703\u001b[39m \u001b[43m            \u001b[49m\u001b[43msql\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    704\u001b[39m \u001b[43m            \u001b[49m\u001b[43mindex_col\u001b[49m\u001b[43m=\u001b[49m\u001b[43mindex_col\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    705\u001b[39m \u001b[43m            \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m=\u001b[49m\u001b[43mparams\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    706\u001b[39m \u001b[43m            \u001b[49m\u001b[43mcoerce_float\u001b[49m\u001b[43m=\u001b[49m\u001b[43mcoerce_float\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    707\u001b[39m \u001b[43m            \u001b[49m\u001b[43mparse_dates\u001b[49m\u001b[43m=\u001b[49m\u001b[43mparse_dates\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    708\u001b[39m \u001b[43m            \u001b[49m\u001b[43mchunksize\u001b[49m\u001b[43m=\u001b[49m\u001b[43mchunksize\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    709\u001b[39m \u001b[43m            \u001b[49m\u001b[43mdtype_backend\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype_backend\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    710\u001b[39m \u001b[43m            \u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m=\u001b[49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m    711\u001b[39m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    713\u001b[39m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m    714\u001b[39m         _is_table_name = pandas_sql.has_table(sql)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/sam3-2026-01-31/.venv/lib/python3.13/site-packages/pandas/io/sql.py:2766\u001b[39m, in \u001b[36mSQLiteDatabase.read_query\u001b[39m\u001b[34m(self, sql, index_col, coerce_float, parse_dates, params, chunksize, dtype, dtype_backend)\u001b[39m\n\u001b[32m   2755\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mread_query\u001b[39m(\n\u001b[32m   2756\u001b[39m     \u001b[38;5;28mself\u001b[39m,\n\u001b[32m   2757\u001b[39m     sql,\n\u001b[32m   (...)\u001b[39m\u001b[32m   2764\u001b[39m     dtype_backend: DtypeBackend | Literal[\u001b[33m\"\u001b[39m\u001b[33mnumpy\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[33m\"\u001b[39m\u001b[33mnumpy\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m   2765\u001b[39m ) -> DataFrame | Iterator[DataFrame]:\n\u001b[32m-> \u001b[39m\u001b[32m2766\u001b[39m     cursor = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43msql\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparams\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   2767\u001b[39m     columns = [col_desc[\u001b[32m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m col_desc \u001b[38;5;129;01min\u001b[39;00m cursor.description]\n\u001b[32m   2769\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m chunksize \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/sam3-2026-01-31/.venv/lib/python3.13/site-packages/pandas/io/sql.py:2714\u001b[39m, in \u001b[36mSQLiteDatabase.execute\u001b[39m\u001b[34m(self, sql, params)\u001b[39m\n\u001b[32m   2711\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m ex \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01minner_exc\u001b[39;00m\n\u001b[32m   2713\u001b[39m ex = DatabaseError(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mExecution failed on sql \u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msql\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexc\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m-> \u001b[39m\u001b[32m2714\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m ex \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mexc\u001b[39;00m\n",
+      "\u001b[31mDatabaseError\u001b[39m: Execution failed on sql '\nSELECT * FROM detections\nORDER BY image_path, confidence DESC, object_index;\n': no such column: image_path"
+     ]
     }
    ],
    "source": [
@@ -184,7 +72,7 @@
     "df = pd.read_sql(sql, conn)\n",
     "conn.close()\n",
     "\n",
-    "df.head()"
+    "df.head(10)"
    ]
   },
   {
